codespan-reporting/tests/snapshots/term__suggestion_remove__rich_no_color.snap
---
source: codespan-reporting/tests/term.rs
expression: TEST_DATA.emit_no_color(&config)
---
error[E0308]: mismatched types
  ┌─ suggestionRemove.fun:4:9
  │
4 │     foo(&3);
  │         ^^ expected `i32`, found `&{integer}`
4 │     foo(&3);
  │         - consider removing the borrow


